--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,13 +13,14 @@
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="dashboard.html">
+		<form class="form-signin" action="dashboard.html" th:action="@{/user/login}" th:method="post">
 			<img class="mb-4" src="asserts/img/bootstrap-solid.svg" th:src="@{/asserts/img/bootstrap-solid.svg}"alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
+            <p style="color: red" th:text="${msg}" th:if="${ not #strings.isEmpty(msg)}"></p>
 			<label class="sr-only">Username</label>
-			<input type="text" class="form-control" th:placeholder="#{login.userName}" placeholder="Username" required="" autofocus="">
+			<input type="text" class="form-control" name="username" th:placeholder="#{login.userName}" placeholder="Username" required="" autofocus="">
 			<label class="sr-only">Password</label>
-			<input type="password" class="form-control" th:placeholder="#{login.password}" placeholder="Password" required="">
+			<input type="password" class="form-control" name="password" th:placeholder="#{login.password}" placeholder="Password" required="">
 			<div class="checkbox mb-3">
 				<label>
           <input type="checkbox" value="remember-me"> [[#{login.remember}]]
