--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -53,37 +53,42 @@
 				<div th:replace="common/bar::#sidebar(activeUrl=emps)"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<form>
+					<form th:action="@{/emp}" th:method="post">
+
+						<!--提交put请求-->
+						<input type="hidden" name="_method" value="put" th:if="${emp != null}">
+
+						<input name="id" type="hidden" th:value="${emp != null} ? ${emp.id}">
 						<div class="form-group">
 							<label>LastName</label>
-							<input type="text" class="form-control" placeholder="zhangsan">
+							<input type="text" name="lastName" class="form-control" placeholder="zhangsan" th:value="${emp != null}?${emp.lastName}">
 						</div>
 						<div class="form-group">
 							<label>Email</label>
-							<input type="email" class="form-control" placeholder="zhangsan@atguigu.com">
+							<input type="email" name="email" class="form-control" placeholder="zhangsan@atguigu.com" th:value="${emp != null}?${emp.email}">
 						</div>
 						<div class="form-group">
 							<label>Gender</label><br/>
 							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="gender"/>
+								<input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp != null} ? ${emp.gender == 1}"/>
 								<label class="form-check-label">男</label>
 							</div>
 							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="gender"/>
+								<input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp != null} ? ${emp.gender == 0}"/>
 								<label class="form-check-label">女</label>
 							</div>
 						</div>
 						<div class="form-group">
 							<label>department</label>
-							<select class="form-control">
-								<option th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}"></option>
+							<select class="form-control" name="department.id">
+								<option th:each="dept:${depts}" th:text="${dept.departmentName}" th:selected="${emp != null} ? ${emp.department.id == dept.id}" th:value="${dept.id}"></option>
 							</select>
 						</div>
 						<div class="form-group">
 							<label>Birth</label>
-							<input type="text" class="form-control" placeholder="zhangsan">
+							<input type="text" class="form-control" name="birth" th:value="${emp != null} ? ${#dates.format(emp.birth,'yyyy-MM-dd HH:mm:ss')}" placeholder="zhangsan">
 						</div>
-						<button type="submit" class="btn btn-primary">添加</button>
+						<button type="submit"  class="btn btn-primary" th:text="${emp != null} ? '修改':'添加' ">添加</button>
 					</form>
 				</main>
 			</div>
